--- a/trunk/HsAlive30/game/org/hamster/alive30/game/GameModule.mxml
+++ b/trunk/HsAlive30/game/org/hamster/alive30/game/GameModule.mxml
@@ -4,7 +4,7 @@
 		   xmlns:container="org.hamster.alive30.game.container.*" 
 		   xmlns:vo="org.hamster.alive30.game.model.vo.*" 
 		   xmlns:util="org.hamster.alive30.common.util.*" 
-		   creationComplete="module1_creationCompleteHandler(event)">
+		   creationComplete="module1_creationCompleteHandler(event)" xmlns:view="org.hamster.alive30.game.view.*">
 	<mx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
@@ -23,6 +23,18 @@
 				facade.registerMediator(new GameModuleMediator(this));
 				// facade.sendNotification(AppFacade.LOAD_BULLET_LIST);
 			}
+			
+			public function start():void
+			{
+				levelStartView.addEventListener("playEnd", levelStartAnimationEndHandler);
+				levelStartView.visible = true;
+			}
+			
+			public function levelStartAnimationEndHandler(evt:Event):void
+			{
+				levelStartView.removeEventListener("playEnd", levelStartAnimationEndHandler);
+				levelStartView.visible = false;
+			}
 
 		]]>
 	</mx:Script>
@@ -30,4 +42,5 @@
 								 width="{GameConstants.GAME_WIDTH}" 
 								 height="{GameConstants.GAME_HEIGHT}" 
 								 bulletListVOArray="{bulletListArray}" />
+	<view:LevelStartView id="levelStartView" width="100%" height="100%" />
 </mx:Module>
